# l0-worker

./: .env.example  .gitignore  API.md  EVENTS.md  PLAN.md  README.md  SECURITY.md  SPECS.md  WHITEPAPER.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
api/: config.ts  replay.ts  status.ts  submit.ts
src/: config.ts  index.ts  server.test.ts  server.ts  worker-instance.test.ts  worker-instance.ts
src/auth/: index.ts  validate.test.ts  validate.ts
src/e2e/: api.test.ts  features.test.ts  inference.test.ts
src/events/: inbound.ts  index.ts  outbound.ts
src/executor/: executor.test.ts  executor.ts  index.ts  providers.ts  slots.test.ts  slots.ts  task.ts
src/inference/: index.ts  order.ts
src/replay/: index.ts  replayer.test.ts  replayer.ts
src/state/: config.test.ts  config.ts  index.ts  machine.test.ts  machine.ts
src/store/: event-store.ts  index.ts  memory-store.test.ts  memory-store.ts
src/utils/: clock.ts  hash.ts  index.ts
supervisor/: Cargo.toml
supervisor/src/: api.rs  health.rs  main.rs  pool.rs  worker.rs
supervisor/tests/: integration.rs
