[package]
name = "l0-supervisor"
version = "0.1.0"
edition = "2021"
description = "Process supervisor for L0 worker pool"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full", "process", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
