[package]
name = "l0-supervisor"
version = "0.1.0"
edition = "2021"
description = "Process supervisor for L0 worker pool"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
